Update README and config files with author and konnector purpose

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "git+https://github.com/konnectors/lucca.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "sebdalink",
   "license": "AGPL-3.0",
   "main": "./src/index.js",
   "eslintConfig": {
