--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ deploy:
 - provider: script
   skip-cleanup: true
   script: DEPLOY_BRANCH=build yarn deploy
+  # script: DEPLOY_BRANCH=build yarn deploy && yarn cozyPublish
   on:
     branch: master
 - provider: script
@@ -24,9 +25,17 @@ deploy:
   script: DEPLOY_BRANCH=latest yarn deploy
   on:
     branch: prod
+# - provider: script
+#   skip-cleanup: true
+#   script: DEPLOY_BRANCH=build yarn deploy && yarn cozyPublish
+#   on:
+#     tags: true
 before_install:
 - openssl aes-256-cbc -K $encrypted_22c1689fb673_key -iv $encrypted_22c1689fb673_iv
   -in github_deploy_key.enc -out /tmp/github_deploy_key -d
 - eval "$(ssh-agent -s)"
 - chmod 600 /tmp/github_deploy_key
 - ssh-add /tmp/github_deploy_key
+after_deploy:
+- rm /tmp/github_deploy_key
+- ssh-add -D
