--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "start": "node ./src/index.js",
     "dev": "cozy-run-dev",
     "standalone": "cozy-run-standalone",
+    "pretest": "npm run clean",
     "test": "konitor testit .",
     "check": "konitor check .",
+    "clean": "rm -rf ./data",
     "build": "webpack",
     "precommit": "yarn lint",
     "lint": "eslint --fix .",
@@ -37,13 +39,14 @@
   "devDependencies": {
     "copy-webpack-plugin": "4.5.4",
     "cozy-app-publish": "0.9.0",
-    "cozy-jobs-cli": "1.4.9",
+    "cozy-jobs-cli": "1.5.1",
     "eslint": "5.7.0",
-    "eslint-config-cozy-app": "1.1.3",
+    "eslint-config-cozy-app": "1.1.4",
     "git-directory-deploy": "1.5.1",
-    "husky": "0.14.3",
-    "konitor": "0.9.0",
-    "webpack": "4.20.2",
+    "husky": "1.1.2",
+    "konitor": "0.10.0",
+    "svgo": "1.1.1",
+    "webpack": "4.22.0",
     "webpack-cli": "3.1.2"
   }
 }
