--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cozy-jobs-cli": "1.8.1",
     "eslint": "5.7.0",
     "eslint-config-cozy-app": "1.1.4",
+    "eslint-plugin-prettier": "3.0.1",
     "git-directory-deploy": "1.5.1",
     "husky": "1.1.2",
     "konitor": "0.10.0",
