--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "travisDeployKey": "./bin/generate_travis_deploy_key"
   },
   "dependencies": {
-    "cozy-konnector-libs": "4.15.1"
+    "cozy-konnector-libs": "4.15.1",
+    "moment": "2.24.0"
   },
   "devDependencies": {
     "copy-webpack-plugin": "4.5.4",
