--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   "eslintIgnore": [
     "build"
   ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint"
+    }
+  },
   "scripts": {
     "start": "node ./src/index.js",
     "dev": "cozy-konnector-dev",
@@ -27,9 +32,8 @@
     "check": "konitor check .",
     "clean": "rm -rf ./data",
     "build": "webpack",
-    "precommit": "yarn lint",
     "lint": "eslint --fix .",
-    "deploy": "git-directory-deploy --directory build/ --branch ${DEPLOY_BRANCH:-build} --repo=${DEPLOY_REPOSITORY:-https://$GITHUB_TOKEN@github.com/konnectors/lucca.git}",
+    "deploy": "git-directory-deploy --directory build/ --branch ${DEPLOY_BRANCH:-build} --repo=${DEPLOY_REPOSITORY:-git@github.com:konnectors/lucca.git}",
     "cozyPublish": "cozy-app-publish --token $REGISTRY_TOKEN --build-commit $(git rev-parse ${DEPLOY_BRANCH:-build})",
     "travisDeployKey": "./bin/generate_travis_deploy_key"
   },
@@ -38,17 +42,17 @@
     "moment": "2.24.0"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "4.5.4",
-    "cozy-app-publish": "0.9.0",
+    "copy-webpack-plugin": "5.0.1",
+    "cozy-app-publish": "0.15.0",
     "cozy-jobs-cli": "1.8.1",
-    "eslint": "5.7.0",
-    "eslint-config-cozy-app": "1.1.4",
+    "eslint": "5.15.3",
+    "eslint-config-cozy-app": "1.1.12",
     "eslint-plugin-prettier": "3.0.1",
     "git-directory-deploy": "1.5.1",
-    "husky": "1.1.2",
-    "konitor": "0.10.0",
-    "svgo": "1.1.1",
-    "webpack": "4.22.0",
-    "webpack-cli": "3.1.2"
+    "husky": "1.3.1",
+    "konitor": "0.10.2",
+    "svgo": "1.2.0",
+    "webpack": "4.29.6",
+    "webpack-cli": "3.3.0"
   }
 }
