--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cozy-konnector-lucca",
-  "version": "1.0.4",
+  "version": "1.2.0",
   "description": "",
   "repository": {
     "type": "git",
@@ -12,38 +12,47 @@
   "main": "./src/index.js",
   "eslintConfig": {
     "extends": [
-      "eslint-config-cozy-app"
+      "cozy-app"
     ]
   },
   "eslintIgnore": [
     "build"
   ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint"
+    }
+  },
   "scripts": {
     "start": "node ./src/index.js",
-    "dev": "cozy-run-dev",
-    "standalone": "cozy-run-standalone",
+    "dev": "cozy-konnector-dev",
+    "standalone": "cozy-konnector-standalone",
+    "pretest": "npm run clean",
     "test": "konitor testit .",
     "check": "konitor check .",
+    "clean": "rm -rf ./data",
     "build": "webpack",
-    "precommit": "yarn lint",
     "lint": "eslint --fix .",
-    "deploy": "git-directory-deploy --directory build/ --branch ${DEPLOY_BRANCH:-build} --repo=${DEPLOY_REPOSITORY:-https://$GITHUB_TOKEN@github.com/konnectors/lucca.git}",
+    "deploy": "git-directory-deploy --directory build/ --branch ${DEPLOY_BRANCH:-build} --repo=${DEPLOY_REPOSITORY:-git@github.com:konnectors/lucca.git}",
     "cozyPublish": "cozy-app-publish --token $REGISTRY_TOKEN --build-commit $(git rev-parse ${DEPLOY_BRANCH:-build})",
     "travisDeployKey": "./bin/generate_travis_deploy_key"
   },
   "dependencies": {
-    "cozy-konnector-libs": "4.8.1"
+    "cozy-konnector-libs": "4.17.1",
+    "moment": "2.24.0"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "4.5.2",
-    "cozy-app-publish": "0.3.6",
-    "cozy-jobs-cli": "1.4.8",
-    "eslint": "5.1.0",
-    "eslint-config-cozy-app": "0.10.0",
+    "copy-webpack-plugin": "5.0.3",
+    "cozy-app-publish": "0.16.2",
+    "cozy-jobs-cli": "1.8.22",
+    "eslint": "5.16.0",
+    "eslint-config-cozy-app": "1.1.12",
+    "eslint-plugin-prettier": "3.1.0",
     "git-directory-deploy": "1.5.1",
-    "husky": "0.14.3",
-    "konitor": "0.9.0",
-    "webpack": "4.16.0",
-    "webpack-cli": "3.0.8"
+    "husky": "1.3.1",
+    "konitor": "0.10.2",
+    "svgo": "1.2.2",
+    "webpack": "4.35.0",
+    "webpack-cli": "3.3.5"
   }
 }
