--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "travisDeployKey": "./bin/generate_travis_deploy_key"
   },
   "dependencies": {
-    "cozy-konnector-libs": "4.42.1",
-    "moment": "2.29.1"
+    "cozy-konnector-libs": "4.42.1"
   },
   "devDependencies": {
     "cozy-jobs-cli": "1.16.1",
